--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "semantic-ui-css": "^2.4.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
