--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.1.2",
     "core-js": "^3.6.5",
     "semantic-ui-css": "^2.4.1",
     "vue": "^3.0.0",
