--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.2",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "semantic-ui-css": "^2.4.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
