--- a/server/api/product/models/product.settings.json
+++ b/server/api/product/models/product.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "products",
   "info": {
-    "name": "Product"
+    "name": "Product",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -31,6 +32,11 @@
     },
     "category": {
       "model": "category"
+    },
+    "description": {
+      "type": "text",
+      "required": true,
+      "default": "texto de descripción"
     }
   }
 }
